# test

./: .npmignore  .npmrc  helloworld.cpp  package-lock.json  package.json  script.js  webpack.config.js
.github/actions/asciidoctor/: action.yaml
.github/actions/emsdk/: action.yaml
.github/actions/my-action/: Dockerfile  action.yml  index.js  package-lock.json  package.json
.github/actions/my-docker-action/: action.yaml
.github/actions/node18/: Dockerfile  action.yaml
.github/actions/pandoc/: action.yaml
.github/actions/wasm/: action.yaml
.github/workflows/: node.js.yml
.github/workflows/my-action/: package.json
.scripts/.cicd/: jobs.sh
.scripts/cicd/: jobs.sh
doc/: documentation.adoc  index.html
lib/: README.txt
src/: demo.html  demo.js
wasm/: CMakeLists.txt  build_cicd.sh  build_local.sh
wasm/include/: SignalAnalyser.h
wasm/src/: SignalAnalyser.cpp  dsp.cpp
